# xiaoxin

xiaoxin-1.7.0/xiaozhi-esp32-1.7.0/main/: CMakeLists.txt  Kconfig.projbuild
xiaoxin-1.7.0/xiaozhi-esp32-1.7.0/main/boards/xiaoxin-esp32s3-154-4G/: config.h  xiaoxin_esp32s3_154_4G.cc
xiaoxin-1.7.0/xiaozhi-esp32-1.7.0/main/protocols/: websocket_protocol.cc
xiaoxin-esp32/: CMakeLists.txt  sdkconfig.defaults.esp32s3
xiaoxin-esp32/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml  main.cc
xiaoxin-esp32/main/audio_codecs/: es8311_audio_codec.cc  es8311_audio_codec.h
xiaoxin-esp32/main/boards/: README.md  xiaoxin-esp32s3.rar
xiaoxin-esp32/main/boards/common/: button.cc  touch_button.cc  touch_button.h  wifi_board.cc
xiaoxin-esp32/main/boards/xiaoxin-esp32s3/: xiaoxin_esp32s3.cc
xiaoxin-esp32/main/boards/xiaoxin-esp32s3-028/: config.h  xiaoxin_esp32s3_028.cc
xiaoxin-esp32/main/boards/xiaoxin-esp32s3-154/: xiaoxin_esp32s3_154.cc
xiaoxin-esp32/main/boards/xiaoxin-zhi/: config.h  xiaoxin_zhi.h
xiaoxin-esp32/main/iot/: README.md
xiaoxin-esp32/scripts/: versions.py
xiaoxin-esp32/scripts/Image_Converter/: README.md
xiaoxin-esp32/scripts/p3_tools/: README.md
